# robot_arm_aansturing

./: CMakeLists.txt  LICENSE  README.md  package.xml
action/: emergency.action  setCostumPose.action  setPose.action
diagrams/: ProtocolStateDiagram.plantuml  behavioralStateMachine.plantuml  component.plantuml  sequenceInit.plantuml  state.plantuml  timingGripper.plantuml  ucd.plantuml
docs/: doc.md  index.md  notes.md
src/robot_arm/: AL5D.cpp  AL5D.hpp  ArmOffset.hpp  Controller.cpp  Controller.hpp  Joint.hpp  MessageHandler.cpp  MessageHandler.hpp  Position.hpp  PositionInstruction.hpp  Queue.cpp  Queue.hpp  Range.hpp  Ranges.hpp  SSC32U.cpp  SSC32U.hpp  main.cpp
src/robot_arm_controller/: ImputController.cpp  ImputController.hpp  InputController.cpp  InputController.hpp  main.cpp
src/shared_lib/: Shared.hpp
