<?xml version="1.0"?>
<package format="2">
  <name>robot_arm_aansturing</name>
  <version>0.0.0</version>
  <description>6 dof robot arm</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="MPW.Muijsert@student.han.nl">Maurits Muijsert</maintainer>
  <maintainer email="DH.Nusselder@student.han.nl">David Hendrik Nusselder</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>

  </export>
</package>